[project]
name = "redhat-linter"
version = "0.1.0"
description = "AI-powered editorial auditor for Red Hat brand voice."
dependencies = [
    "streamlit>=1.31.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "python-docx>=1.1.0",
    "httpx>=0.27.0",
    "mcp>=0.1.0",
    "fastmcp>=0.4.1",
    "docling>=2.0.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "watchdog>=4.0.0",
]
